WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153418
Modern IDB: Some IDB tests crash in ~SQLiteIDBBackingStore
https://bugs.webkit.org/show_bug.cgi?id=153418
Summary
Modern IDB: Some IDB tests crash in ~SQLiteIDBBackingStore
Brady Eidson
Reported
2016-01-24 22:34:42 PST
Modern IDB: Some IDB tests crash in ~SQLiteIDBBackingStore
https://build.webkit.org/results/Apple%20El%20Capitan%20Debug%20WK1%20(Tests)/r195523%20(2419)/results.html
https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK1%20(Tests)/r195522%20(2803)/results.html
https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK1%20(Tests)/r195523%20(2804)/results.html
Haven't seen these locally, but the crash logs all suggest the same thing: Crash tearing down the JSGlobalObject in the backing store constructor. The JSGlobalObject almost certainly needs to be cleared out before the VM, instead of vice versa.
Attachments
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-01-24 22:35:32 PST
Cannot get to this in a timely manner tonight with only my laptop and the sad state my build is in. Will get to it first thing in the morning.
Brady Eidson
Comment 2
2016-01-24 22:56:55 PST
This was almost certainly introduced along with the VM in
http://trac.webkit.org/changeset/195517
I'll land a speculative fix before going to bed.
Brady Eidson
Comment 3
2016-01-24 23:05:01 PST
Unreviewed speculative fix landed in
http://trac.webkit.org/changeset/195525
Will check the bots in the A.M.
Brady Eidson
Comment 4
2016-01-25 08:47:54 PST
At least one test was reliably crashing before the speculative fix, and it hasn't happened since. Closing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug