Unreviewed, speculative fix for: Modern IDB: Some IDB tests crash in ~SQLiteIDBBackingStore https://bugs.webkit.org/show_bug.cgi?id=153418

No new tests.

* Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::SQLiteIDBBackingStore::~SQLiteIDBBackingStore): Clear the global object
  before wiping out the VM.

Canonical link: https://commits.webkit.org/171484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195525 268f45cc-cd09-0410-ab3c-d52691b4dbfc